package com.company.moves;
import ru.ifmo.se.pokemon.*;

public class Boomburst extends SpecialMove {

    public Boomburst() {
        super(Type.NORMAL, 140, 100);
    }

    protected String describe() {
        return "использует Boomburst";
    }

}
